[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/SwordHitBox.gd" type="Script" id=1]
[ext_resource path="res://src/Weapon.gd" type="Script" id=4]

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.32
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 80.0
tangential_accel_random = 0.47

[node name="Weapon" type="Node2D"]
script = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 7, 3 )
rotation = -0.785398
offset = Vector2( 5, -4 )

[node name="HitBox" type="Area2D" parent="Node2D/Sprite"]
position = Vector2( -7.54184, -1.05863 )
rotation = -0.963567
collision_layer = 0
collision_mask = 12
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Sprite/HitBox"]
position = Vector2( 10.1459, 9.02241 )
rotation = 1.77675
disabled = true

[node name="ChargeParticles" type="Particles2D" parent="Node2D/Sprite"]
emitting = false
amount = 15
lifetime = 0.6
process_material = SubResource( 3 )

[node name="WeaponAnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="Node2D/Sprite/HitBox" to="Node2D/Sprite/HitBox" method="_on_HitBox_area_entered"]
